--- a/mysite/templates/index.html
+++ b/mysite/templates/index.html
@@ -1,13 +1,11 @@
+{% load static %}
+<!DOCTYPE html>
 <html>
 <head>
-
+    <link rel="stylesheet" href="{% static 'css/style.css'%}">
      <title>This is templete</title>
 
-    <style>
-        .id_clr{
-            color: red;
-                }
-    </style>
+    
 </head>
 <body>
 
