--- a/mysite/templates/userform.html
+++ b/mysite/templates/userform.html
@@ -21,6 +21,19 @@
     </div>
 
 
+    <form method = "POST">
+        {% csrf_token %}
+        
+
+        <label for="num"> Any number </label> <br>
+        <input type= "num" id ="num" name="num"><br>
+        
+        <input type = "submit" value ="submit"> </input>
+
+
+    </form>
+
+
 
 </div>
 
