--- a/mysite/templates/userform.html
+++ b/mysite/templates/userform.html
@@ -27,11 +27,23 @@
 
         <label for="num"> Any number </label> <br>
         <input type= "num" id ="num" name="num"><br>
-        
+
         <input type = "submit" value ="submit"> </input>
 
 
     </form>
+
+
+    {% for  i in data %}
+    <div>
+
+     <h2> "{{  i.service_icon }}" </h2>
+
+
+    </div>
+
+    {% endfor %}
+
 
 
 
