--- a/mysite/templates/userform.html
+++ b/mysite/templates/userform.html
@@ -38,7 +38,7 @@
     </table>
 
    
-    <!--
+    
 
         <form method = "POST">
             {% csrf_token %}
@@ -66,8 +66,165 @@
 
 
     </form>
-    -->
+    
 
+    
+    <form method = "POST">
+        {% csrf_token %}
+        
+
+        <label for="num"> Any number </label> <br>
+        <input type= "num" id ="num" name="num"><br>
+
+        <input type = "submit" value ="submit"> </input>
+
+
+    </form>
+    
+
+    <form method = "POST">
+        {% csrf_token %}
+        
+
+        <label for="num"> Any number </label> <br>
+        <input type= "num" id ="num" name="num"><br>
+
+        <input type = "submit" value ="submit"> </input>
+
+
+    </form>
+    
+    <form method = "POST">
+        {% csrf_token %}
+        
+
+        <label for="num"> Any number </label> <br>
+        <input type= "num" id ="num" name="num"><br>
+
+        <input type = "submit" value ="submit"> </input>
+
+
+    </form>
+    
+    <form method = "POST">
+        {% csrf_token %}
+        
+
+        <label for="num"> Any number </label> <br>
+        <input type= "num" id ="num" name="num"><br>
+
+        <input type = "submit" value ="submit"> </input>
+
+
+    </form>
+    
+    <form method = "POST">
+        {% csrf_token %}
+        
+
+        <label for="num"> Any number </label> <br>
+        <input type= "num" id ="num" name="num"><br>
+
+        <input type = "submit" value ="submit"> </input>
+
+
+    </form>
+    
+    <form method = "POST">
+        {% csrf_token %}
+        
+
+        <label for="num"> Any number </label> <br>
+        <input type= "num" id ="num" name="num"><br>
+
+        <input type = "submit" value ="submit"> </input>
+
+
+    </form>
+    
+    <form method = "POST">
+        {% csrf_token %}
+        
+
+        <label for="num"> Any number </label> <br>
+        <input type= "num" id ="num" name="num"><br>
+
+        <input type = "submit" value ="submit"> </input>
+
+
+    </form>
+    
+    <form method = "POST">
+        {% csrf_token %}
+        
+
+        <label for="num"> Any number </label> <br>
+        <input type= "num" id ="num" name="num"><br>
+
+        <input type = "submit" value ="submit"> </input>
+
+
+    </form>
+    
+    <form method = "POST">
+        {% csrf_token %}
+        
+
+        <label for="num"> Any number </label> <br>
+        <input type= "num" id ="num" name="num"><br>
+
+        <input type = "submit" value ="submit"> </input>
+
+
+    </form>
+    
+    <form method = "POST">
+        {% csrf_token %}
+        
+
+        <label for="num"> Any number </label> <br>
+        <input type= "num" id ="num" name="num"><br>
+
+        <input type = "submit" value ="submit"> </input>
+
+
+    </form>
+    
+    <form method = "POST">
+        {% csrf_token %}
+        
+
+        <label for="num"> Any number </label> <br>
+        <input type= "num" id ="num" name="num"><br>
+
+        <input type = "submit" value ="submit"> </input>
+
+
+    </form>
+    
+    <form method = "POST">
+        {% csrf_token %}
+        
+
+        <label for="num"> Any number </label> <br>
+        <input type= "num" id ="num" name="num"><br>
+
+        <input type = "submit" value ="submit"> </input>
+
+
+    </form>
+    
+    <form method = "POST">
+        {% csrf_token %}
+        
+
+        <label for="num"> Any number </label> <br>
+        <input type= "num" id ="num" name="num"><br>
+
+        <input type = "submit" value ="submit"> </input>
+
+
+    </form>
     
 
 
